  
2009-08-26:
- Adapted to new tcpclient++
- Fixed a warning warn_unused_result in LocalFonbook.cpp
- Fixed wrong HTTP-GET header in Nummerzoeker.cpp
 
2009-08-30:
- Fixed detection of login failure in Tools::Login()
- Improved cleanup when deleting Listener, FritzFonbook, CallList
- Delay destructor of FritzFonbook and CallList to wait for running threads to end
- Improved concurrent access to Fritz!Box using Tools::GetFritzBoxMutex()

2009-09-05/2009-09-20:
- Improved detection of login type (SID or PASSWORD), which is now done only once
- Improved Tools::Login() to avoid unneccessary logins
- Created FritzClient to act as an facade to the FB which uses tcpclient::HttpClient.
  FritzClient handles all communication to the FB including login. The consumer just 
  uses one of the following methods to get information from the FB
  * RequestCallList()
  * RequestLocationSettings()
  * RequestSipSettings()
  * RequestFonbook()
  This class uses a mutex to automatically serialize multiple instances of itself. The lock 
  is aquired at creation and released at destruction of the class instance. Removed mutex
  in Tools.
- Login() and GetLang() moved as private methods to FritzClient
- Code cleanup and introduction of RETRY_* macros for easy retry handling when 
  communicating with the FB

2009-09-13:
- Fixed entity decoding in FritzFonbook.cpp

2009-09-14:
- Added sort routines in CallList and Fonbook

2009-11-16:
- Adapted to changes in tcpclient++
  * fixed TcpClient to throw correct exceptions on connect. This fixes detection 
    of disabled call monitor, the corresponding hint "dial #96*5*" is now shown in 
    syslog again

2009-11-21:
- Improved matching of phone numbers: Fritz!Box control codes *xxx# are now ignored.

2009-11-29:
- Added missing include <cstring> in FritzClient.cpp

2009-12-08:
- Fixed retry delay calculation in case of connection refused

2010-01-17:
- Fixed a possible segfault when sorting calllists and fonbooks