@@ -78,13 +78,19 @@ public:
 			           bool *locationSettingsDetected = NULL,
 			           std::string *countryCode = NULL, std::string *regionCode = NULL);
 	/**
+	 * Sets arbitrary ports for connections to the Fritz!Box's listener and webinterface.
+	 * @param the port to connect to the listener
+	 * @param the port to connect to the webinterface
+	 */
+	void static SetupPorts ( size_t listener = 1012, size_t ui = 80 );
+	/**
 	 * Establishes MSN filtering.
 	 * An MsnFilter enables the library to only notify the application on
 	 * events which occur on one of the MSNs specified. A call to this method is only
 	 * needed if filtering is wanted. Default is no filtering.
 	 * @param the list of MSNs to filter on
 	 */
-	void static SetupMsnFilter(  std::vector <std::string> vMsn );
+	void static SetupMsnFilter( std::vector <std::string> vMsn );
 	/**
 	 * Modifies logging channels.
 	 * As default, logging of libfritz++ actions is performed using default c++
