@@ -109,3 +109,8 @@
 
 2010-01-17:
 - Fixed a possible segfault when sorting calllists and fonbooks
+
+2010-01-18:
+- Added Config::SetupPorts() to provide non-standard ports
+- Fixed some warnings about ununsed parameters in base-classes and empty implementations
+- Removed useless check in CallList::RetrieveEntry()
